removed unwanted names

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="occ-wrapper">
       <div style="display:contents" class="oc-nav-bar">
           <div class="ng-tns-c0-0 ng-trigger ng-trigger-slideInOut nav-bar vertical-nav-bar expanded">
-              <div class="header"><div header=""><img class="occ-citi-logo" src="assets/images/citi-logo-trans.png" style="cursor: pointer;" tabindex="0" ng-reflect-router-link="/collections"></div></div><ul class="ng-tns-c0-0">
+              <div class="header"><div header=""><img class="occ-corp-logo" src="assets/images/corp-logo-trans.png" style="cursor: pointer;" tabindex="0" ng-reflect-router-link="/collections"></div></div><ul class="ng-tns-c0-0">
 
                
                   <li class="ng-tns-c0-0 ng-star-inserted" style="">
@@ -22,7 +22,7 @@
                  
               </div>
           </div>
-          <div class="occ-copyright-footer text-center ng-star-inserted"><div class="row"><div class="col-xs-12 text-center occ-copyright">Copyright © 2007 - 2020 Citigroup Inc.</div></div><div class="row"><div class="col-xs-12"><span class="ng-binding" ng-click="#">CitiGroup.com </span><span class="ng-binding" ng-click="#">Cookie Policy </span><span class="ng-binding" ng-click="#">Customer Security </span><span class="ng-binding" ng-click="#">Privacy Policy </span><span class="ng-binding" ng-click="#">Terms &amp; Conditions</span></div></div></div>
+          <div class="occ-copyright-footer text-center ng-star-inserted"><div class="row"><div class="col-xs-12 text-center occ-copyright">Copyright © 2007 - 2020 Corp Inc.</div></div><div class="row"><div class="col-xs-12"><span class="ng-binding" ng-click="#">Corp.com</span><span class="ng-binding" ng-click="#">Cookie Policy </span><span class="ng-binding" ng-click="#">Customer Security </span><span class="ng-binding" ng-click="#">Privacy Policy </span><span class="ng-binding" ng-click="#">Terms &amp; Conditions</span></div></div></div>
       </div>
   </div>
 </div>
